<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_collapsed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitCenter"
                    app:layout_collapseMode="parallax" />

                <TextView
                    android:id="@+id/title_collapsed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@color/colorPrimaryDark"
                    android:fontFamily="@font/font_toolbar"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="32sp"
                    app:layout_collapseMode="pin" />

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <TextView
                    android:id="@+id/title_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="78dp"
                    android:fontFamily="@font/font_toolbar"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textSize="32sp" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/rested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="36dp"
                    android:fontFamily="@font/typo_bold"
                    android:gravity="left"
                    android:text="@string/ingredients"
                    android:textSize="32sp" />

                <View
                    android:layout_width="250dp"
                    android:layout_height="4dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:background="@color/colorPrimaryDark" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_add_widget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="add widget"
                    fancy:fb_borderColor="@color/colorPrimaryDark"
                    fancy:fb_borderWidth="4dp"
                    fancy:fb_defaultColor="@color/colorPrimary"
                    fancy:fb_focusColor="@color/colorPrimaryDark"
                    fancy:fb_radius="30dp"
                    fancy:fb_textColor="#202020"
                    fancy:fb_textSize="12sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_main_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="36dp"
                    android:fontFamily="@font/typo_bold"
                    android:gravity="left"
                    android:text="@string/step_by_step"
                    android:textSize="32sp" />

                <View
                    android:layout_width="250dp"
                    android:layout_height="4dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:background="@color/colorPrimaryDark" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_main_step"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
