<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_step"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_text_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/typo_bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/typo_regular"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>