<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/main_media_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="220dp"
            app:controller_layout_id="@layout/custom_playback"
            app:hide_on_touch="true" />

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/typo_bold"
        android:gravity="left"
        android:text="@string/instructions"
        android:textSize="32sp" />

    <View
        android:layout_width="250dp"
        android:layout_height="4dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tx_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/typo_regular"
        android:gravity="left"
        android:textSize="22sp" />

</LinearLayout>
